--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-    "bootstrap": "^4.5.0",
+    "@ngxs/logger-plugin": "^3.7.1",
+    "@ngxs/store": "^3.7.1",
+    "bootstrap": "^4.6.0",
+    "material": "^0.4.3",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
